k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment

spec:
  replicas: 2 # 🔥 scaling (changed from 1)

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: auth-backend
          imagePullPolicy: Never

          ports:
            - containerPort: 3000
