k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  type: NodePort

  selector:
    app: backend

  ports:
    - port: 3000
      # container port in the pod
      targetPort: 3000
      # Expose service outside cluster
      nodePort: 30007
